<resources>
    <string name="app_name">RePoth</string>
    <string name="web_client_id">679547864804-k60cgkv44ask6j14qd05det20pjrhfor.apps.googleusercontent.com</string>
    <string name="web_client_secret">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</string>
    <string name="no_attach_file"> </string>
    <string name="settings_navbar_menu">Settings</string>
    <string name="library_navbar_menu">Library</string>
    <string name="report_navbar_menu">Report</string>
    <string name="history_navbar_menu">History</string>
    <string name="home_navbar_menu">Home</string>
    <string name="onboarding_text">Slogan</string>
    <string name="notification_emoji_desc">A ring as a symbol of notification.</string>
    <string name="back_btn_desc">Arrow icon to navigate back to previous menu.</string>
    <string name="notification_menu_intro">Notification</string>
    <string name="loading_frame">Loading frame.</string>
    <string name="image_preview_container_desc">A preview showcase for recently taken picture to be send to tensorflow or retake</string>
    <string name="send_btn_desc">An message paper is flying, indicating sending activity</string>
    <string name="picture_retake_btn_desc">An retake icon, usually indicated by turn back icon</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="homepage_intro_pic_desc">Pothole image</string>
    <string name="notification_icon_desc">Bell icon for indicating notification section</string>
    <string name="home_header_text">Report your complaint with us</string>
    <string name="scanner_fab_icon_desc">A report-like icon for indicating that the button is leading to camera reporting feature.</string>
    <string name="logo_content_desc">Logo RePoth</string>
    <string name="app_slogan">Slogan</string>
    <string name="title_activity_main_bottom">MainBottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="onboarding1">Welcome to RePoth</string>
    <string name="onboarding2">Let\'s keep our roads safe and pothole-free. Start reporting potholes now. Share accurate details about the potholes you encounter. Clear information will help the government to take action.</string>
    <string name="onboarding3">Let\'s get started!</string>
    <string name="start">Start Now</string>
    <string name="your_web_client_id">http://repoth.my.id:8081</string>
    <string name="home_info">Ayo laporkan jalan berlubang di tempatmu agar info ini bermanfaat bagi banyak orang.</string>
    <string name="foto_jalan">Arahkan foto ke lubang jalan, pastikan lubang berada ditengah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="settings_emoji_desc">Raising hands</string>
    <string name="settings_page_header">Settings</string>
    <string name="settings_text_2">C23-PS027 Team</string>
    <string name="settings_part_1_intro">About Us</string>
    <string name="settings_part_2_intro">Attribusi</string>
    <string name="settings_text_1">RePoth is a application:</string>
    <string name="team_member_1">Chayun Fadila</string>
    <string name="team_member_2">Maskumambang Padmanegara</string>
    <string name="team_member_3">Muhammad Fikri</string>
    <string name="team_member_4">Reza Syahpalevi Mahardika</string>
    <string name="team_member_5">Apriandi Rasyid Almajid</string>
    <string name="team_member_6">Muhammad Ramdhani</string>
    <string name="ml_learning_path">Machine Learning</string>
    <string name="md_learning_path">Mobile Development</string>
    <string name="cc_learning_path">Cloud Computing</string>
    <string name="credits_part_1_intro">About us</string>
    <string name="credits_part_2_intro">Attribusi</string>
</resources>