<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_secondaryContainer_50"
        tools:context=".ui.view.home.HomeActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/homepage_header_card"
                android:layout_width="match_parent"
                android:layout_height="300dp"

                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:cardElevation="30dp"
                app:cardCornerRadius="15dp">
                <ImageView
                    android:id="@+id/homepage_header_content_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/homepage_intro_pic_desc"
                    android:src="@drawable/home_pothole_pic"/>
                <ImageView
                    android:id="@+id/notification_btn_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="end|top"
                    android:contentDescription="@string/notification_icon_desc"
                    android:src="@drawable/notification_icon"
                    app:tint="?attr/color" />
                <TextView
                    android:id="@+id/homepage_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="bottom|start"
                    android:text="@string/home_header_text"
                    android:textColor="?attr/color"
                    android:fontFamily="@font/poppins_black"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/load_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_secondaryContainer_50"
            android:contentDescription="@string/loading_frame"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="3dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/load_animimation_lottie"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            app:lottie_rawRes="@raw/loading_animation"
            app:lottie_autoPlay="true"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
